// Protobuf for the node discovery protocol.
syntax = "proto3";

package proto.discovery;

import "common.proto";

message Ping {
  proto.common.Endpoint from = 1;
  proto.common.Endpoint to = 2;
  int32 version = 3;
  int64 timestamp = 4;
}

message Pong {
  proto.common.Endpoint from = 1;
  int32 echo_version = 2;
  int64 timestamp = 3;
}

// renamed: FindNeighbours
message FindPeers {
  proto.common.Endpoint from = 1;
  bytes target_id = 2;
  int64 timestamp = 3;
}

// renamed: Neighbours
message Peers {
  proto.common.Endpoint from = 1;
  repeated proto.common.Endpoint peers = 2;
  int64 timestamp = 3;
}
